# SmartNewsAnalyticsPlatform

./: .env.example  .gitignore  DATA_PIPELINE_FLOW.md  Dockerfile  EMBEDDING_MODELS_GUIDE.md  MULTIMODAL_SEARCH_GUIDE.md  README.md  SERVICE_LAYER_ARCHITECTURE.md  TIMESCALEDB_ANALYTICS_FLOW.md  docker-compose.yml  manage.py  pyproject.toml
SmartNewsAnalyticsPlatform/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
apps/analytics/: apps.py  consumers.py  models.py  routing.py  services.py  tasks.py  urls.py  views.py
apps/analytics/management/commands/: setup_timescaledb.py
apps/analytics/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
apps/articles/: apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/articles/management/commands/: generate_multimodal_embeddings.py  load_sample_data.py  switch_embedding_model.py
apps/articles/migrations/: 0001_initial.py  0002_initial.py  0002_multimodal_search.py  0003_merge_0002_initial_0002_multimodal_search.py
apps/services/: article_service.py  embedding_service.py  multimodal_service.py  search_service.py
apps/users/: apps.py  models.py  urls.py
apps/users/migrations/: 0001_initial.py
docker/: init-db.sql
